mail, social, slide
jQ, CSS + bootsnipp

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ $('#quote-carousel').carousel({
 <br>
 
 
-          <a class="btn btn-lg btn-default" href="#" role="button" style="font-size:1.5em">Pide tu cotización aquí </a>
+          <a class="btn btn-lg btn-default"  href="herreriaestructuralcastro@hotmail.com?Subject=Cotización%20desde%20su%20web" target="_top" role="button" style="font-size:1.5em">Pide tu cotización aquí </a>
 				</div>
 			  </div>
 			</div>
@@ -214,18 +214,18 @@ $('#quote-carousel').carousel({
            <div class="row">
           <div class="col-lg-4">
             <img src="themes/assets/images/1.png" alt="Generic placeholder image">
-            <h4>Salates</h4>
-            <p><a class="btn btn-default" href="#" role="button">Add to cart &raquo;</a></p>
+
+            <p><a class="btn btn-default" href="#" role="button">Ver en tamaño completo &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img src="themes/assets/images/2.png" alt="Generic placeholder image">
-            <h4>Meal</h4>
-            <p><a class="btn btn-default" href="#" role="button">Add to cart &raquo;</a></p>
+
+            <p><a class="btn btn-default" href="#" role="button">Ver en tamaño completo &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img src="themes/assets/images/3.png" alt="Generic placeholder image">
-            <h4>Drink</h4>
-            <p><a class="btn btn-default" href="#" role="button">Add to cart &raquo;</a></p>
+
+            <p><a class="btn btn-default" href="#" role="button">Ver en tamaño completo &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -234,18 +234,18 @@ $('#quote-carousel').carousel({
            <div class="row">
           <div class="col-lg-4">
             <img src="themes/assets/images/4.png" alt="Generic placeholder image">
-            <h4>Salates</h4>
-            <p><a class="btn btn-default" href="#" role="button">Add to cart &raquo;</a></p>
+
+            <p><a class="btn btn-default" href="#" role="button">Ver en tamaño completo &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img src="themes/assets/images/5.png" alt="Generic placeholder image">
-            <h4>Meal</h4>
-            <p><a class="btn btn-default" href="#" role="button">Add to cart &raquo;</a></p>
+
+            <p><a class="btn btn-default" href="#" role="button">Ver en tamaño completo &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img src="themes/assets/images/6.png" alt="Generic placeholder image">
-            <h4>Drink</h4>
-            <p><a class="btn btn-default" href="#" role="button">Add to cart &raquo;</a></p>
+
+            <p><a class="btn btn-default" href="#" role="button">Ver en tamaño completo &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -256,18 +256,18 @@ $('#quote-carousel').carousel({
             <div class="row">
           <div class="col-lg-4">
             <img  src="themes/assets/images/1.png" alt="Generic placeholder image">
-            <h4>Salates</h4>
-            <p><a class="btn btn-default" href="#" role="button">Add to cart &raquo;</a></p>
+
+            <p><a class="btn btn-default" href="#" role="button">Ver en tamaño completo &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img  src="themes/assets/images/2.png" alt="Generic placeholder image">
-            <h4>Meal</h4>
-            <p><a class="btn btn-default" href="#" role="button">Add to cart &raquo;</a></p>
+
+            <p><a class="btn btn-default" href="#" role="button">Ver en tamaño completo &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img  src="themes/assets/images/3.png" alt="Generic placeholder image">
-            <h4>Drink</h4>
-            <p><a class="btn btn-default" href="#" role="button">Add to cart &raquo;</a></p>
+
+            <p><a class="btn btn-default" href="#" role="button">Ver en tamaño completo &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
           </div>
@@ -388,21 +388,19 @@ $('#quote-carousel').carousel({
 
 
 
-<div class="banner">
+<div class="banner" align="center">
 
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-12">
                     <h3 class="itemsTitle" >Obten tu presupuesto en menos de 24 horas</h3>
                 </div>
-                <div class="col-lg-6">
-                    <ul class="list-inline banner-social-buttons">
-                        <li><a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                        </li>
 
-                    </ul>
-                </div>
+            </div>
+
+            <div class="col-lg-12">
+                <a class="btn btn-lg btn-default" href="#" role="button" style="font-size:1.5em">Pide tu cotización aquí </a>
             </div>
 
         </div>
