social stuff & gallery
slides, social media, pics, DEL “olds”

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
   <body>
 
 
+
+
+<script src="https://apis.google.com/js/platform.js"></script>
+
+
 <script>
 $(document).ready(function() {
 //Set the carousel options
@@ -150,50 +155,6 @@ $('#quote-carousel').carousel({
   </div>
 
 
-	<div class="introSection">
-		<div class="container">
-		<div class="row">
-		<div class="col-lg-5">
-		<h3>Herrería en General</h3>
-		<p>
-
-    Trabajos sobre diseño
-    Escaleras de caracol, pasamanos y barandales
-    Domos y techos
-    Ventanería
-    Balcones
-    Muebles
-
-		</p>
-		</div>
-
-		<div class="col-lg-4">
-		<h3>Sistemas de seguridad</h3>
-		<p>
-
-    Circuito cerrado
-    Instalación de camaras y monitores
-    Cercas electrificadas
-    Protecciones
-    Alarmas
-    Enrejado y alambrado
-
-		</p>
-
-		</div>
-
-		<div class="col-lg-3">
-		<h3>Automatización de Portones</h3>
-		<p>
-
-    Ascendentes
-    Abatibles
-    Plegables
-    Corredizos
-
-		</p>
-
-		</div>
 
 		</div>
 		</div>
@@ -202,32 +163,139 @@ $('#quote-carousel').carousel({
 
 
 
+<div class="container">
+	<div class="row">
+        <!-- Boxes de Acoes -->
+    	<div class="col-xs-12 col-lg-4">
+			<div class="box">
+				<div class="icon">
+					<div class="image"><i class="fa fa-thumbs-o-up"></i></div>
+					<div class="info">
+						<h3 class="title">Herrería en general</h3>
+						<p>
+							<br>Trabajos sobre diseño
+       <br>Escaleras de caracol, pasamanos y barandales
+       <br>Domos y techos
+       <br>Ventanería
+       <br>Balcones
+       <br>Muebles
+						</p>
+						<div class="more">
+
+						</div>
+					</div>
+				</div>
+				<div class="space"></div>
+			</div>
+		</div>
+
+        <div class="col-xs-12 col-lg-4">
+			<div class="box">
+				<div class="icon">
+					<div class="image"><i class="fa fa-flag"></i></div>
+					<div class="info">
+						<h3 class="title">Sistemas de seguridad</h3>
+    					<p>
+							<br>Circuito cerrado
+       <br>Instalación de camaras y monitores
+       <br>Cercas electrificadas
+       <br>Protecciones
+       <br>Alarmas
+       <br>Enrejado y alambrado
+						</p>
+						<div class="more">
+
+						</div>
+					</div>
+				</div>
+				<div class="space"></div>
+			</div>
+		</div>
+
+        <div class="col-xs-12 col-lg-4">
+			<div class="box">
+				<div class="icon">
+					<div class="image"><i class="fa fa-desktop"></i></div>
+					<div class="info">
+						<h3 class="title">Automatización de Portones</h3>
+    					<p>
+
+              <br>Ascendentes
+              <br>Abatibles
+              <br>Plegables
+              <br>Corredizos
+
+<br>
+<br>
+<br>
+
+						</p>
+						<div class="more">
+
+						</div>
+					</div>
+				</div>
+				<div class="space"></div>
+			</div>
+		</div>
+		<!-- /Boxes de Acoes -->
+	</div>
+</div>
 
 
 
-     <div class="container marketing">
+
+
+
+
+
+
+
+
+
+<div class="container marketing">
+
+
       <h2 class="itemsTitle">Conoce nuestros últimos trabajos</h2>
-    <div id="myCarousel1" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <div class="carousel-inner">
-          <div class="item active">
-           <div class="row">
+
+
+          <div id="myCarousel1" class="carousel slide" data-ride="carousel">
+
+                          <!-- Indicators -->
+                          <div class="carousel-inner">
+
+                                <div class="item active">
+
+
+                                            <div class="row">
+
+
           <div class="col-lg-4">
             <img src="themes/assets/images/1.png" alt="Generic placeholder image">
 
             <p><a class="btn btn-default" href="#" role="button">Ver en tamaño completo &raquo;</a></p>
-          </div><!-- /.col-lg-4 -->
+          </div>
+
+
+          <!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img src="themes/assets/images/2.png" alt="Generic placeholder image">
 
             <p><a class="btn btn-default" href="#" role="button">Ver en tamaño completo &raquo;</a></p>
-          </div><!-- /.col-lg-4 -->
+          </div>
+
+
+          <!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img src="themes/assets/images/3.png" alt="Generic placeholder image">
 
             <p><a class="btn btn-default" href="#" role="button">Ver en tamaño completo &raquo;</a></p>
-          </div><!-- /.col-lg-4 -->
-        </div><!-- /.row -->
+          </div>
+
+
+          <!-- /.col-lg-4 -->
+
+                                          </div><!-- /.row -->
 
           </div>
           <div class="item">
@@ -236,7 +304,22 @@ $('#quote-carousel').carousel({
             <img src="themes/assets/images/4.png" alt="Generic placeholder image">
 
             <p><a class="btn btn-default" href="#" role="button">Ver en tamaño completo &raquo;</a></p>
-          </div><!-- /.col-lg-4 -->
+
+
+
+
+
+
+
+
+
+          </div>
+
+
+
+
+
+          <!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img src="themes/assets/images/5.png" alt="Generic placeholder image">
 
@@ -255,21 +338,25 @@ $('#quote-carousel').carousel({
           <div class="item">
             <div class="row">
           <div class="col-lg-4">
-            <img  src="themes/assets/images/1.png" alt="Generic placeholder image">
+            <img  src="themes/assets/images/7.png" alt="Generic placeholder image">
 
             <p><a class="btn btn-default" href="#" role="button">Ver en tamaño completo &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img  src="themes/assets/images/2.png" alt="Generic placeholder image">
+            <img  src="themes/assets/images/8.png" alt="Generic placeholder image">
 
             <p><a class="btn btn-default" href="#" role="button">Ver en tamaño completo &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img  src="themes/assets/images/3.png" alt="Generic placeholder image">
+            <img  src="themes/assets/images/9.png" alt="Generic placeholder image">
 
             <p><a class="btn btn-default" href="#" role="button">Ver en tamaño completo &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
+
+
+
+
           </div>
         </div>
         <a class="left carousel-control" href="#myCarousel1" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
@@ -283,10 +370,116 @@ $('#quote-carousel').carousel({
 
 
 
+
+
+
+
+
+
+
+ <div class="container marketing">
+
+
+
+
+
+           <div id="myCarousel2" class="carousel slide" data-ride="carousel">
+
+                           <!-- Indicators -->
+                           <div class="carousel-inner">
+
+                                 <div class="item active">
+
+
+                                             <div class="row">
+
+
+           <div class="col-lg-4">
+             <img src="themes/assets/images/10.png" alt="Generic placeholder image">
+
+             <p><a class="btn btn-default" href="#" role="button">Ver en tamaño completo &raquo;</a></p>
+           </div>
+
+
+           <!-- /.col-lg-4 -->
+           <div class="col-lg-4">
+             <img src="themes/assets/images/11.png" alt="Generic placeholder image">
+
+             <p><a class="btn btn-default" href="#" role="button">Ver en tamaño completo &raquo;</a></p>
+           </div>
+
+
+           <!-- /.col-lg-4 -->
+           <div class="col-lg-4">
+             <img src="themes/assets/images/12.png" alt="Generic placeholder image">
+
+             <p><a class="btn btn-default" href="#" role="button">Ver en tamaño completo &raquo;</a></p>
+           </div>
+
+
+           <!-- /.col-lg-4 -->
+
+                                           </div><!-- /.row -->
+
+           </div>
+           <div class="item">
+            <div class="row">
+           <div class="col-lg-4">
+             <img src="themes/assets/images/13.png" alt="Generic placeholder image">
+
+             <p><a class="btn btn-default" href="#" role="button">Ver en tamaño completo &raquo;</a></p>
+
+
+
+
+
+
+
+
+
+           </div>
+
+
+
+
+
+           <!-- /.col-lg-4 -->
+           <div class="col-lg-4">
+             <img src="themes/assets/images/14.png" alt="Generic placeholder image">
+
+             <p><a class="btn btn-default" href="#" role="button">Ver en tamaño completo &raquo;</a></p>
+           </div><!-- /.col-lg-4 -->
+           <div class="col-lg-4">
+             <img src="themes/assets/images/15.png" alt="Generic placeholder image">
+
+             <p><a class="btn btn-default" href="#" role="button">Ver en tamaño completo &raquo;</a></p>
+           </div><!-- /.col-lg-4 -->
+         </div><!-- /.row -->
+
+           </div>
+
+
+
+
+         </div>
+         <a class="left carousel-control" href="#myCarousel2" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
+         <a class="right carousel-control" href="#myCarousel2" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+       </div><!-- /.carousel -->
+     </div>
+
+
+
+
+
+
+
+
+
+
 <div class="container">
 
             <div class="row">
-                <div class="col-lg-5 col-sm-6">
+                <div class="col-lg-5">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <br>
@@ -297,8 +490,17 @@ $('#quote-carousel').carousel({
                     <p class="lead">Contando con dos talleres en el Distrito Federal y uno mas en la ciudad de Puebla; siempre asegurando la mejor calidad y servicio a nuestros clientes, comprometidos en todo momento con la completa satisfacción de nuestros clientes, guiandonos siempre con los valores que nos reconocen, integridad, calidad, responsabilidad, liderazgo, colaboración y pasión.
                        <a target="_blank" ></a> </p>
                 </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="themes/daze/teem.png" alt="">
+                <div class="col-lg-5 col-lg-offset-2">
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                    <img class="img-responsive" src="themes/daze/teem.jpg" alt="">
                 </div>
             </div>
             <br>
@@ -339,11 +541,16 @@ $('#quote-carousel').carousel({
             <blockquote>
               <div class="row">
                 <div class="col-sm-3 text-center">
-                  <img class="img-circle" src="http://wp-desk.com/lovinflat/images/persons/person_1.png" style="width: 100px;height:100px;">
+                  <img class="img-circle" src="themes/daze/f.jpg" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
-                  <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit!</p>
-                  <small>Someone famous</small>
+                  <p>
+                Síguenos en nuestra página de facebook y conoce las promociones y descuentos que tenemos para ti
+                </p>
+
+                  <div class="fb-like" data-href="https://www.facebook.com/ArteYDisenoEstructuralCastro" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
+
+
                 </div>
               </div>
             </blockquote>
@@ -353,11 +560,14 @@ $('#quote-carousel').carousel({
             <blockquote>
               <div class="row">
                 <div class="col-sm-3 text-center">
-                  <img class="img-circle" src="http://wp-desk.com/lovinflat/images/persons/person_2.png" style="width: 100px;height:100px;">
+                  <img class="img-circle" src="themes/daze/y.png" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam auctor nec lacus ut tempor. Mauris.</p>
-                  <small>Someone famous</small>
+                  <p>Conoce más de nuestro taller y nuestro trabajo en nuestro canal de Youtube</p>
+
+                  <div class="g-ytsubscribe" data-channelid="UCs2DYH_-n45oOVjvlfeBLog" data-layout="default" data-count="undefined"></div>
+
+
                 </div>
               </div>
             </blockquote>
@@ -367,11 +577,11 @@ $('#quote-carousel').carousel({
             <blockquote>
               <div class="row">
                 <div class="col-sm-3 text-center">
-                  <img class="img-circle" src="http://wp-desk.com/lovinflat/images/persons/person_3.png" style="width: 100px;height:100px;">
+                  <img class="img-circle" src="themes/daze/m.png" style="width: 100px;height:100px;">
                 </div>
                 <div class="col-sm-9">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rutrum elit in arcu blandit, eget pretium nisl accumsan. Sed ultricies commodo tortor, eu pretium mauris.</p>
-                  <small>Someone famous</small>
+                  <p>Escríbenos para conocer tus necesidades y ofrecerte la mejor opción en nuestros servicios</p>
+
                 </div>
               </div>
             </blockquote>
@@ -385,6 +595,17 @@ $('#quote-carousel').carousel({
     </div>
   </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
 
 
 
