--- a/index.html
+++ b/index.html
@@ -77,15 +77,30 @@ $('#quote-carousel').carousel({
         <div class="item active">
           <script
 			src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDY0kkJiTPVd2U7aTOAwhc9ySH6oHxOIYM&sensor=false">
+
+
 			</script>
 			<script>
-			var myCenter=new google.maps.LatLng(19.0685609,-98.1451394);
+			var myCenter=new google.maps.LatLng(19.042709, -98.082619);
+
+
+
+
+
+
 			var marker;
 			function initialize()
 			{
 			var mapProp = {
 			  center:myCenter,
-			  zoom:15,
+
+
+
+
+
+			  zoom:16,
+
+
 			  mapTypeId:google.maps.MapTypeId.ROADMAP
 			  };
 			var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
@@ -113,7 +128,9 @@ $('#quote-carousel').carousel({
 				<div class="carousel-caption">
 
 
+
           <div class="icn-responsive">
+
           <img src="themes/assets/images/caraicono.png" alt="Herrerías Castro">
           </div>
 
@@ -125,7 +142,7 @@ $('#quote-carousel').carousel({
 <br>
 
 
-          <a class="btn btn-lg btn-default"  href="herreriaestructuralcastro@hotmail.com?Subject=Cotización%20desde%20su%20web" target="_top" role="button" style="font-size:1.5em">Pide tu cotización aquí </a>
+          <a class="btn btn-lg btn-default"  href="mailto:herreriaestructuralcastro@hotmail.com?Subject=Cotización%20desde%20su%20web" target="_top" role="button" style="font-size:1.5em">Pide tu cotización aquí </a>
 				</div>
 			  </div>
 			</div>
@@ -145,7 +162,7 @@ $('#quote-carousel').carousel({
       <div class="col-lg-12">
 
         <div align="center" class="img-responsive">
-        <img src="themes/assets/images/logo-completo.png" alt="Herrerías Castro">
+        <img src="themes/assets/images/2logo-completo.png" alt="Herrerías Castro">
         </div>
 
         <h1 class="cntr">Arte y diseño estructural</h1>
@@ -169,8 +186,15 @@ $('#quote-carousel').carousel({
     	<div class="col-xs-12 col-lg-4">
 			<div class="box">
 				<div class="icon">
-					<div class="image"><i class="fa fa-thumbs-o-up"></i></div>
+
+
+
+
 					<div class="info">
+
+            <img class="daze" src="themes/daze/her.png" alt="Herrería">
+
+
 						<h3 class="title">Herrería en general</h3>
 						<p>
 							<br>Trabajos sobre diseño
@@ -192,8 +216,12 @@ $('#quote-carousel').carousel({
         <div class="col-xs-12 col-lg-4">
 			<div class="box">
 				<div class="icon">
-					<div class="image"><i class="fa fa-flag"></i></div>
+
 					<div class="info">
+
+            <img class="daze" src="themes/daze/vid.png" alt="Herrería">
+
+
 						<h3 class="title">Sistemas de seguridad</h3>
     					<p>
 							<br>Circuito cerrado
@@ -215,8 +243,11 @@ $('#quote-carousel').carousel({
         <div class="col-xs-12 col-lg-4">
 			<div class="box">
 				<div class="icon">
-					<div class="image"><i class="fa fa-desktop"></i></div>
+
 					<div class="info">
+
+            <img class="daze" src="themes/daze/por.png" alt="Herrería">
+
 						<h3 class="title">Automatización de Portones</h3>
     					<p>
 
@@ -520,7 +551,7 @@ $('#quote-carousel').carousel({
       <br>
       <br>
       <br>
-    <h2>Suíguenos para obtener grandes ofertas</h2>
+    <h2>Síguenos para obtener grandes ofertas</h2>
     </div>
   </div>
   <div class='row'>
@@ -540,8 +571,12 @@ $('#quote-carousel').carousel({
           <div class="item active">
             <blockquote>
               <div class="row">
+
                 <div class="col-sm-3 text-center">
-                  <img class="img-circle" src="themes/daze/f.jpg" style="width: 100px;height:100px;">
+                  <a href="https://www.facebook.com/ArteYDisenoEstructuralCastro" >
+                    <img class="img-circle" src="themes/daze/f.jpg" style="width: 100px;height:100px;">
+                  </a>
+
                 </div>
                 <div class="col-sm-9">
                   <p>
@@ -560,7 +595,11 @@ $('#quote-carousel').carousel({
             <blockquote>
               <div class="row">
                 <div class="col-sm-3 text-center">
-                  <img class="img-circle" src="themes/daze/y.png" style="width: 100px;height:100px;">
+
+                  <a href="https://www.youtube.com/channel/UCs2DYH_-n45oOVjvlfeBLog" >
+                    <img class="img-circle" src="themes/daze/y.png" style="width: 100px;height:100px;">
+                  </a>
+
                 </div>
                 <div class="col-sm-9">
                   <p>Conoce más de nuestro taller y nuestro trabajo en nuestro canal de Youtube</p>
@@ -573,11 +612,13 @@ $('#quote-carousel').carousel({
             </blockquote>
           </div>
           <!-- Quote 3 -->
+
+
           <div class="item">
             <blockquote>
               <div class="row">
                 <div class="col-sm-3 text-center">
-                  <img class="img-circle" src="themes/daze/m.png" style="width: 100px;height:100px;">
+                  <a href="mailto:herreriaestructuralcastro@hotmail.com?Subject=Cotización%20desde%20su%20web" ><img class="img-circle" src="themes/daze/m.png" style="width: 100px;height:100px;"></a>
                 </div>
                 <div class="col-sm-9">
                   <p>Escríbenos para conocer tus necesidades y ofrecerte la mejor opción en nuestros servicios</p>
@@ -588,12 +629,24 @@ $('#quote-carousel').carousel({
           </div>
         </div>
 
+
+<br>
+
+
         <!-- Carousel Buttons Next/Prev -->
         <a data-slide="prev" href="#quote-carousel" class="left carousel-control"><i class="fa fa-chevron-left"></i></a>
         <a data-slide="next" href="#quote-carousel" class="right carousel-control"><i class="fa fa-chevron-right"></i></a>
-      </div>
+
+
+
+    </div>
     </div>
   </div>
+
+  <br>
+  <br>
+
+
 </div>
 
 
@@ -614,15 +667,52 @@ $('#quote-carousel').carousel({
         <div class="container">
 
             <div class="row">
+
+
+              <div class="col-lg-12">
+                <br>
+                  <a class="btn btn-lg btn-default" href="mailto:herreriaestructuralcastro@hotmail.com?Subject=Cotización%20desde%20su%20web"
+                   role="button" style="font-size:1.5em">Pide tu cotización aquí </a>
+              </div>
+
+
+
+
                 <div class="col-lg-12">
                     <h3 class="itemsTitle" >Obten tu presupuesto en menos de 24 horas</h3>
                 </div>
 
+
+
             </div>
 
-            <div class="col-lg-12">
-                <a class="btn btn-lg btn-default" href="#" role="button" style="font-size:1.5em">Pide tu cotización aquí </a>
+
+
+            <div class="col-lg-6">
+                <p class="section-heading" >
+
+            Nuestro taller:<br>
+Calle olmos N∞1502 Esq. Av: Nacional Col. Bosques de San Angel<br>
+Tel: 2 86 02 91 /
+Cel: 22 21 55 42 13
+
+            </p>
             </div>
+
+
+
+            <div class="col-lg-6">
+                <p class="section-heading" >
+
+          Oficina:<br>
+Av. Cazadores de Morelia N∞ 1 Col. Lomas de Lorerto<br>
+Cel: 22 26 5347 16   <br>
+
+          </p>
+            </div>
+
+
+
 
         </div>
 
