--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
     <link href="themes/daze/social-slide.css" rel="stylesheet">
     <link href="themes/daze/landing-page.css" rel="stylesheet">
 
-
+	<style type="text/css">
+      .icn-responsive{
+        max-height: 250px;
+      }
+    </style>
   </head>
 <!-- NAVBAR
 ================================================== -->
