--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 	<style type="text/css">
       .icn-responsive{
         max-height: 250px;
+
+
       }
     </style>
   </head>
@@ -103,6 +105,7 @@ $('#quote-carousel').carousel({
 
 
 			  zoom:16,
+        scrollwheel: false,
 
 
 			  mapTypeId:google.maps.MapTypeId.ROADMAP
